@@ -151,6 +151,20 @@ square wave via L<GD::Simple>:
 Try changing the value for C<$res>. See the example
 directory for more.
 
+=begin HTML
+
+<h1>EXAMPLES</h1>
+<ol>
+    <li>Bar chart<br/><img src="https://github.com/jeffa/Math-Window2Viewport/blob/master/examples/bar-chart.png" alt="Bar chart" /></li>
+    <li>Sine wave<br/><img src="https://github.com/jeffa/Math-Window2Viewport/blob/master/examples/sine.png" alt="Sine wave" /></li>
+    <li>Sawtooth wave<br/><img src="https://github.com/jeffa/Math-Window2Viewport/blob/master/examples/sawtooth.png" alt="Sawtooth wave" /></li>
+    <li>Triangle wave<br/><img src="https://github.com/jeffa/Math-Window2Viewport/blob/master/examples/triangle.png" alt="Triangle wave" /></li>
+    <li>Square wave<br/><img src="https://github.com/jeffa/Math-Window2Viewport/blob/master/examples/square.png" alt="Square wave" /></li>
+    <li>Fourier square<br/><img src="https://github.com/jeffa/Math-Window2Viewport/blob/master/examples/fsquare.png" alt="Fourier square" /></li>
+</ol>
+
+=end HTML
+
 =head1 SEE ALSO
 
 =over 4
